# GradientDescent

./: .gitignore  CMakeLists.txt  README.md
Catch_tests/: CMakeLists.txt  GradientDescentTest.cpp
src/: CMakeLists.txt  GradientDescent.cpp  GradientDescent.h
